<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/send_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sendBg">

    <Button android:id="@+id/send_btn"
            style="@style/SendButton"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:text="@string/send_btn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/send_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/send_padding"
            android:paddingBottom="@dimen/send_padding"
            android:gravity="center">

            <TextView
                style="@style/SendTitle"
                android:layout_marginTop="@dimen/send_item_margin"
                android:text="@string/send_content" />

            <EditText android:id="@+id/send_content"
                style="@style/SendContent"
                android:hint="@string/send_content_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/send_item_margin">

                    <Button android:id="@+id/send_image_sel"
                        style="@style/SendButton"
                        android:width="0dp"
                        android:layout_weight="0.3"
                        android:text="@string/send_image_sel" />

                    <Button android:id="@+id/send_image_del"
                        style="@style/SendButton"
                        android:width="0dp"
                        android:layout_weight="0.7"
                        android:layout_marginStart="@dimen/btn_margin"
                        android:text="@string/send_image_del" />

            </LinearLayout>

            <com.tsbridge.view.CircleImageView  android:id="@+id/send_image"
                android:layout_width="@dimen/send_image_width"
                android:layout_height="@dimen/send_image_width"
                android:layout_marginTop="@dimen/btn_image"
                android:src="@drawable/black"
                app:circle_border_color="#ff0000"
                app:circle_border_width="5dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>